tests/snapshots/errors/type_error_if_condition.mc
if "not a bool" {
    print("yes");
}
